--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "node --watch src/server.js",
+    "dev": "nodemon src/server.js",
     "seed": "node src/seed.js"
   },
   "keywords": [
@@ -24,5 +24,8 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.3",
     "zod": "^4.3.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.14"
   }
 }
